# csci221-hw09

./: .gitignore  160-0.1-1  160-0.1-2  160-0.2-1  160-0.2-2  160-0.3-1  160-0.3-2  160-0.4-1  160-0.4-2  160-0.5-1  160-0.5-2  160-0.6-1  160-0.6-2  160-0.7-1  160-0.7-2  160-0.8-1  160-0.8-2  160-0.9-1  160-0.9-2  20-0.1-1  20-0.1-2  20-0.2-1  20-0.2-2  20-0.3-1  20-0.3-2  20-0.4-1  20-0.4-2  20-0.5-0  20-0.5-1  20-0.5-2  20-0.6-1  20-0.6-2  20-0.7-1  20-0.7-2  20-0.8-1  20-0.8-2  20-0.9-1  20-0.9-2  40-0.1-1  40-0.1-2  (+61 more)
