cmake_minimum_required(VERSION 3.10)
project(tsp)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_compile_options(-Wall -Wextra -pedantic)
add_library(Cities     cities.cc)
add_library(Chromosome chromosome.cc)
add_library(Deme       deme.cc)
add_library(ClimbChromosome climb_chromosome.cc)
add_library(TournamentDeme  tournament_deme.cc)
target_link_libraries(Deme        LINK_PUBLIC Chromosome)

add_executable(tsp tsp.cc)

find_package(Catch2 REQUIRED)
add_executable(test_cities test_cities.cc)
target_link_libraries(test_cities PRIVATE Catch2::Catch2WithMain)
target_link_libraries(test_cities LINK_PUBLIC Cities)
target_link_libraries(tsp         LINK_PUBLIC Cities)
target_link_libraries(tsp         LINK_PUBLIC Chromosome)
target_link_libraries(tsp         LINK_PUBLIC ClimbChromosome)
target_link_libraries(tsp         LINK_PUBLIC Deme)
target_link_libraries(tsp         LINK_PUBLIC TournamentDeme)
